# learn-control

./: InvertedPendulum.ipynb
Kalman Filter/: IMU_Data.csv  KalmanFIlter.ipynb  kalmanfilter.py
Kalman Filter/.ipynb_checkpoints/: KalmanFIlter-checkpoint.ipynb
Kalman Filter/Attitude/: QAttitude.ipynb  pyproject.toml
Kalman Filter/Attitude/QAttitude/: __init__.py
Kalman Filter/Attitude/QAttitude.egg-info/: SOURCES.txt
Kalman Filter/Attitude/QAttitude/QAttitude.egg-info/: PKG-INFO  top_level.txt
Kalman Filter/Attitude/QAttitude/plot/: __init__.py  attitude.py
Kalman Filter/Attitude/QAttitude/rep/: __init__.py  euler.py  quaternion.py
Kalman Filter/__marimo__/session/: kalmanfilter.py.json
