[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "QAttitude"
version = "0.1.0"
description = "Attitude representation and estimation utilities"
requires-python = ">=3.9"
dependencies = ["numpy", "plotly", "pandas"]

[tool.setuptools]
packages = ["QAttitude", "QAttitude.rep", "QAttitude.plot"]
